# construction-and-analysis-of-graph-models

./: .gitignore  LICENSE  library.py  pyproject.toml  pytest.ini
lab1/: main.py  source.py  time_test.py
lab2/: main.py  time_test.py
lab3/: main.py
lab4/: main.py
tests/: adjacency_matrix_test.py  conftest.py  graphs_test.py  test_adjacency_matrix.py
