[tool.poetry]
name = "construction-and-analysis-of-graph-models"
version = "0.1.0"
description = ""
authors = ["Kirill Lapushinskiy <kirill@lapushinskiy.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
