[tool.poetry]
name = "construction-and-analysis-of-graph-models"
version = "0.1.0"
description = ""
authors = ["Kirill Lapushinskiy <kirill@lapushinskiy.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.9.0"
networkx = "^2.6.3"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
texttable = "^1.6.4"
Pympler = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
